# rgg_save_tool_py

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  convert_ishin_save.py  pyproject.toml  rgg_save_tool.py  rgg_save_tools.py  setup.py
.github/workflows/: build.yml  publish.yml
rgg_save_tool/: rgg_save_tool.py
saves/: test_ik.json  test_ik.sav
tests/: rgg_save_tool_test.py
