[tool.poetry]
name = "rgg_save_tool"
version = "0.1.0"
description = "A tool for encrypting and decrypting RGG Studios game saves. (DE Only)"
authors = ["GarnetSunset <github@amusement.vision>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "rgg_save_tool" }
]

[tool.poetry.dependencies]
python = "^3.8"
msgpack = "^1.1.0"

[tool.poetry.dev-dependencies]
poetry-dynamic-versioning = "^1.7.1"

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rgg-save-tool = "rgg_save_tool.rgg_save_tool:main"